# dot-xx

./: CMakeLists.txt  LICENSE  README.md  abs__diff_8xx.html  abs__diff_8xx.js  annotated.html  annotated_dup.js  assert_8xx.html  basic__ops_8xx.html  basic__ops_8xx.js  classdxx_1_1http_1_1PathNode-members.html  classdxx_1_1http_1_1PathNode.html  classdxx_1_1http_1_1PathNode.js  classdxx_1_1http_1_1PendingConnection-members.html  classdxx_1_1http_1_1PendingConnection.html  classdxx_1_1http_1_1PendingConnection.js  classdxx_1_1http_1_1Server-members.html  classdxx_1_1http_1_1Server.html  classdxx_1_1http_1_1Server.js  classdxx_1_1http_1_1SimpleTask-members.html  classdxx_1_1http_1_1SimpleTask.html  classdxx_1_1http_1_1SimpleTask.js  classdxx_1_1http_1_1utils_1_1File-members.html  classdxx_1_1http_1_1utils_1_1File.html  classdxx_1_1overload_1_1fn__ptr__wrapper-members.html  classdxx_1_1overload_1_1fn__ptr__wrapper.html  classdxx_1_1selftest_1_1LifetimeTester-members.html  classdxx_1_1selftest_1_1LifetimeTester.html  classdxx_1_1selftest_1_1LifetimeTester.js  classdxx_1_1selftest_1_1UnitTest-members.html  classdxx_1_1selftest_1_1UnitTest.html  classdxx_1_1utils_1_1Defer-members.html  classdxx_1_1utils_1_1Defer.html  classdxx_1_1utils_1_1FileDescriptor-members.html  classdxx_1_1utils_1_1FileDescriptor.html  classdxx_1_1utils_1_1FileDescriptor.js  classdxx_1_1utils_1_1heap_1_1Option-members.html  classdxx_1_1utils_1_1heap_1_1Option.html  classdxx_1_1utils_1_1heap_1_1Option.js  classes.html  (+315 more)
.github/workflows/: build-and-test.yml
example/: main.cc
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  concepts_0.js  concepts_1.js  concepts_2.js  concepts_4.js  concepts_5.js  concepts_7.js  concepts_8.js  enums_1.js  enums_2.js  (+51 more)
src/: assert.xx  compat.xx  coro.xx  cstd.xx  defer.xx  errors.xx  file_descriptor.xx  fixed.xx  http.xx  internal.xx  lifetime_tester.xx  math.xx  message.cc  message.xx  meta.xx  method.xx  mime.xx  name_deduce.xx  option.xx  overload.xx  path.xx  ranges.xx  selftest.xx  server.cc  server.xx  status_codes.xx  traits.xx  url.xx  utils.xx  variant.xx
src/linalg/: basic_ops.xx  container_traits.xx  cross.xx  dot.xx  linalg.xx  norm.xx  traits.xx
src/utils/: abs_diff.xx  sign.xx  utils.xx
test/: defer.cc  main.cc  meta.cc  name_deduce.cc  option.cc  overload.cc  path.cc  ranges.cc  sanity-check.cc  sanity_check.cc  traits.cc  variant.cc
test/linalg/: basic_ops.cc  container_traits.cc  cross.cc  dot.cc  norm.cc  traits.cc
test/utils/: abs_diff.cc  sign.cc
